fix: Fix bug that caused blank page to be rendered when searching for non-existent products style: Add css to prevent large images from overflowing style: Make the description input bigger by using textarea

--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ dialog > form {
   margin-top: 1rem;
 }
 
-dialog > form > input {
+dialog > form > input,
+dialog > form > input > textarea {
   margin-top: 0.2rem;
   margin-bottom: 1rem;
   border-radius: 5px;
@@ -115,9 +116,11 @@ dialog > form > label {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.product-container > .product-image-container {
+.product-container > .product-image-container,
+.editable-product-list-container > .image-container {
   place-self: center;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   display: flex;
   justify-content: center;
   padding: 0.5rem;
@@ -145,6 +148,9 @@ dialog > form > label {
   margin-top: 0.4rem;
 }
 
+.product-description {
+  text-wrap: wrap;
+}
 /* Select all product label nodes */
 .text-element-container > div[class$="container"] > div[class$="label"] {
   font-weight: bold;
@@ -176,17 +182,6 @@ dialog > form > label {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.editable-product-list-container > .image-container {
-  place-self: center;
-  width: 80%;
-  height: 80%;
-  display: flex;
-  justify-content: center;
-  padding: 0.5rem;
-  border: solid 2px black;
-  border-radius: 10px;
-}
-
 .editable-product-list-container > .edit-product-form {
   display: flex;
   flex-direction: column;
@@ -202,7 +197,8 @@ dialog > form > label {
 
 /* Selecting the inputs */
 
-.editable-product-list-container > .edit-product-form > input {
+.editable-product-list-container > .edit-product-form > input,
+textarea {
   margin-top: 0.2rem;
   margin-bottom: 1rem;
   border-radius: 5px;
